...
  "about_termsOfUse": "Terms of Use",
  "accountDetails_descriptor_legacy": "Legacy",
  "accountDetails_descriptor_segwit": "Segwit",
  "accountDetails_descriptor_taproot": "Taproot",
  "accountDetails_descriptor_wrappedSegwit": "Wrapped Segwit",
...
  "backups_downloadSettingsDataBackupFile": "Download Settings & Data Backup File",
  "backups_downloadSettingsMetadataBackupFile": "Download Settings & Metadata Backup File",
  "backups_erase_mobile_wallet": "Erase Mobile Wallet",
  "backups_erase_wallets_and_backups": "Erase Mobile Wallet and Backups",
  "backups_erase_wallets_and_backups_modal_1_2_android_subheading": "You’re about to permanently delete your Envoy Wallet. \n\nIf you are using Magic Backups, your Envoy Seed will also be deleted from Android Auto Backup. ",
...
  "backups_toggle_envoy_mobile_wallet_key": "Mobile Wallet Key",
  "backups_viewMobileWalletSeed": "View Mobile Wallet Seed",
  "bottomNav_accounts": "Accounts",
  "bottomNav_activity": "Activity",
  "bottomNav_devices": "Devices",
  "bottomNav_learn": "Learn",
  "bottomNav_privacy": "Privacy",
...
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
  "component_back": "Back",
  "component_cancel": "Cancel",
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
  "component_dismiss": "Dismiss",
  "component_done": "Done",
  "component_dontShowAgain": "Don’t show again",
  "component_exit": "Exit",
...
  "component_learnMore": "Learn more",
  "component_minishield_buy": "Buy",
  "component_next": "Next",
  "component_no": "No",
  "component_notificationText": "Issue establishing Tor connectivity",
...
  "descriptor_toast_descriptorCopied": "Descriptor copied to clipboard.",
  "descriptor_toast_signatureCopied": "Signature copied to clipboard.",
  "device_deviceDetailsPrimeRemoved_accessoryRemoved": "Accessory removed, please reconnect Prime.",
  "device_deviceDetailsPrimeRemoved_completeAccessorySetup": "Complete Accessory Set Up",
  "device_deviceDetailsPrimeRemoved_pairPassportAgain": "Pair Passport Again",
  "device_deviceDetailsPrimeRemoved_reconnectPassport": "Reconnect Passport",
  "device_deviceDetailsPrime_connected": "Connected",
...
  "envoy_welcome_screen_subheading": "For a seamless setup, we recommend enabling [[Magic Backups]].\n\nAdvanced users can manually create or restore a wallet seed.",
  "erase_wallet_with_balance_modal_CTA1": "Return to my Accounts",
  "erase_wallet_with_balance_modal_CTA2": "Delete Accounts anyway",
  "erase_wallet_with_balance_modal_subheading": "Before deleting your Envoy Wallet, please empty your Accounts. \nGo to Backups > Erase Wallets and Backups once you’re done.",
  "exploreAddresses_listFilter_unused": "Unused",
...
  "exploreAdresses_activityOptions_editAccountName": "Edit Account Name",
  "exploreAdresses_activityOptions_exploreAddresses": "Explore Addresses",
  "exploreAdresses_activityOptions_showDescriptor": "Show Descriptor",
  "exploreAdresses_activityOptions_signMessage": "Sign Message",
  "export_backup_modal_subheading": "This encrypted file contains useful wallet data such as labels, accounts, and settings.\nThis file is encrypted with your Mobile Wallet Seed. Ensure your seed is backed up securely. ",
...
  "firmware_updatingPrime_verifying": "Verifying Update",
  "header_chooseAccount": "CHOOSE ACCOUNT",
  "hide_amount_first_time_text": "Swipe to show and hide your balance.",
  "hot_wallet_accounts_creation_done_text_explainer": "Tap the above card to receive Bitcoin.",
  "hot_wallet_accounts_creation_done_text_explainer_more_than_1_accnt": "Tap any of the above cards to receive Bitcoin.",
  "invalid_qr_heading": "Invalid QR Code",
  "invalid_qr_subheading": "QR code does not contain a valid Bitcoin transaction (PSBT). Please check and try again.",
...
  "manage_device_details_menu_editDevice": "Edit Device Name",
  "manage_device_details_menu_unpairPassport": "Unpair Passport",
  "manage_device_details_unpaired": "Unpaired",
  "manage_device_rename_modal_heading": "Rename your Passport",
  "manualToggleOnSeed_toastHeading_failedText": "Unable to backup. Please try again later.",
...
  "menu_about": "About",
  "menu_backups": "Backups",
  "menu_heading": "ENVOY",
  "menu_privacy": "Privacy",
  "menu_settings": "Settings",
...
  "onboarding_bluetoothDisabled_enable": "Enable in Settings",
  "onboarding_bluetoothDisabled_header": "Enable Bluetooth for QuantumLink Connection",
  "onboarding_bluetoothIntro_connect": "Connect with QuantumLink",
  "onboarding_bluetoothIntro_content": "Passport Prime uses a new, secure Bluetooth-based protocol for real time communication with Envoy.\n\nQuantumLink creates an end-to-end encrypted tunnel between Passport and Envoy, ensuring a secure connection.",
  "onboarding_bluetoothIntro_header": "Secure Bluetooth with\nQuantumLink",
...
  "onboarding_tutorialHotWallet_content": "Also known as a “hot wallet.” Spending from this wallet requires only your phone for authorization.\n\nSince your Mobile Wallet is connected to the Internet, use this wallet to store small amounts of Bitcoin for frequent transactions.",
  "onboarding_tutorialHotWallet_header": "Mobile Wallet",
  "onboarding_welcome_content": "Reclaim your sovereignty with Envoy, a simple Bitcoin wallet with powerful account management and privacy features.",
  "onboarding_welcome_createMobileWallet": "Create a \nMobile Wallet",
  "onboarding_welcome_header": "Welcome to Envoy",
...
  "receive_tx_list_awaitingConfirmation": "Awaiting confirmation",
  "receive_tx_list_change": "Change",
  "receive_tx_list_receive": "Receive",
  "receive_tx_list_scan": "Scan",
  "receive_tx_list_send": "Send",
...
  "settings_advancedModalReceiveSegwit_title": "Receive to Segwit",
  "settings_advancedModalReceiveTaproot_content": "With this toggle on, Taproot addresses will be generated when you tap receive. Ensure entities sending you Bitcoin are Taproot compatible before proceeding.",
  "settings_advancedModalReceiveTaproot_title": "Receive to Taproot",
  "settings_advanced_enableBuyRamp": "Buy in Envoy",
  "settings_advanced_enabled_signet_modal_link": "Learn more about Signet [[here]].",
...
  "tagged_tagDetails_sheet_retag_cta2": "Retag Selected",
  "tagged_tagDetails_sheet_transferSelected": "Transfer Selected",
  "tap_and_drag_first_time_text": "Hold to drag and reorder your accounts.",
  "taproot_passport_dialog_heading": "Taproot on Passport",
  "taproot_passport_dialog_later": "Do It Later",
...
