...
                      child: Column(
                        children: [
                          Row(
                            mainAxisAlignment: MainAxisAlignment.spaceBetween,
                            children: [
                              SettingText(
                                "Dev options",
                                onTap: () {
                                  // TODO: FIGMA
                                  showDialog(
                                    fullscreenDialog: true,
                                    context: context,
                                    builder: (context) {
...
