# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# (02) envoyPrimeStates
appId: com.foundationdevices.envoy
---

# TODO: please set the lock time to Never on the Prime for this test to work
# On the PRIME side you need to be in HOME (DEV app version installed)
# Also this test is adjusted for MOTOROLA only

# already starting clean
#- launchApp:
#    clearState: true

- tapOn: "Devices"

# make sure you can see new device Prime
- assertVisible: "Passport Prime.*\nPassport Prime"

# enter into Prime and check QL state
- tapOn: "Passport Prime.*\nPassport Prime"

# (1.) CHECK active
- extendedWaitUntil:
    visible: "QuantumLink\nActive"
    timeout: 15000

# PRIME: Pull down the top drawer on Prime
- runScript:
    file: prime_scripts/interactions/prime_swipe.js
    env:
      SX: "240"
      SY: "5"
      EX: "240"
      EY: "500"

# PRIME: tap Prime's Bluetooth button (turn it OFF)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "288"
      Y: "160"

# (2.) CHECK inactive
- extendedWaitUntil:
    visible: "QuantumLink\nInactive"
    timeout: 15000

# PRIME: tap Prime's Bluetooth button (turn it ON)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "288"
      Y: "160"

# PRIME: close the top bar
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "288"
      Y: "600"

# forget the Prime (MOTOROLA ONLY FLOW)
- swipe:
    start: "50%, 1%"
    end: "50%, 80%"
    duration: 500

- tapOn: "Bluetooth"

- tapOn:
    id: "gear_icon_image"

- tapOn: "Forget"
- tapOn: "Forget device"

# (3.) CHECK if the Prime is forgotten
- extendedWaitUntil:
    visible: "Accessory removed, please reconnect Prime."
    timeout: 15000

# pair it again
- tapOn: "Pair Passport Again"

# TODO: for some reason when running maestro tests it will not ask a permission on motorola, not possible to adjust
- runFlow:
    when:
      visible: "Pair"
    commands:
      - tapOn: "Pair"

# wait to make sure it is connected again
- extendedWaitUntil:
    visible: "QuantumLink\nActive"
    timeout: 15000

# PRIME: go to settings (bottom left button in home)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "24"
      Y: "760"

- runScript:
    file: prime_scripts/helpers/prime_assert_visible.js
    env:
      TEXT: "Connected to Envoy"
      TIMEOUT_S: "10"

# PRIME: tap at "Connected to Envoy"
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "240"
      Y: "150"

# PRIME: disconnect prime from Envoy
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "240"
      Y: "760"

# PRIME: tap Continue
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "240"
      Y: "600"

- tapOn: "Confirm"

# (4.) CHECK if the Prime is unpaired
- assertVisible: "Unpaired"

# go home
- tapOn: "Accounts"

# PRIME: go home
# go back
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "48"
      Y: "80"

- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "48"
      Y: "80"

################## NEVER LOCK THE SCREEN after testing !!!
# PRIME: open menu (bottom-left hamburger on home)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "40"
      Y: "740"

# wait for Prime to enter menu
- runScript:
    file: prime_scripts/helpers/prime_assert_visible.js
    env:
      TEXT: "Settings"
      TIMEOUT_S: "10"

# PRIME: tap "Settings" row (under the General section)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "240"
      Y: "320"

# PRIME: tap "Auto Lock" row (under Settings)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "240"
      Y: "354"

# PRIME: tap "Never" option (on the Auto Lock screen)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "240"
      Y: "681"

# PRIME: tap back chevron (top-left)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "47"
      Y: "72"

# PRIME: tap back chevron (top-left)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "47"
      Y: "72"

# PRIME: tap hamburger chevron (top-left)
- runScript:
    file: prime_scripts/interactions/prime_tap.js
    env:
      X: "47"
      Y: "72"

  # TODO: reconnect again for the next test?