# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

appId: com.foundationdevices.envoy
---
- launchApp:
      clearState: false

# make sure you entered the app again before testing
- extendedWaitUntil:
    visible: "ACCOUNTS"
    timeout: 720000  # wait up to 12 min for it to appear

- tapOn:
      id: hamburger_menu

- tapOn: |-
      BACKUPS
      BACKUPS

- tapOn: Erase Mobile Wallet

- tapOn: Continue

- tapOn: Continue

- assertVisible: Delete Accounts anyway
